kustomization-new/components/employee-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
  namespace: employee
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: employee-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
   #alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:522814728991:certificate/71552876-67fc-42d3-b5f6-656e0f80c28e
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: awsdev.cloud-emgmt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: employee-frontend-service
            port: 
              number: 80
  - host: awsback.cloud-emgmt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: employee-backend-service
            port: 
              number: 80
